# auto_coder

./: .gitignore  AI_ORCHESTRATOR_ROLES.md  AI_ORCHESTRATOR_WORKFLOWS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: gemini-review.yaml  test.yaml
docs/: ARCHITECTURE.md  CLI_REFERENCE.md  FAQ.md  FIXES_SUMMARY.md  GEMINI_REVIEW.md  GETTING_STARTED.md  IMPROVEMENT_PLAN.md  OPERATIONS.md  langgraph-studio-enhancements-plan.md
docs/PLANS/: PHASE_2_IMPLEMENTATION.md  PHASE_3_GATES_VERIFICATION.md  PHASE_4_MULTI_MODEL_HIERARCHY.md  PHASE_5_POLISH_ADVANCED.md  SUPERVISOR_ORCHESTRATOR.md  SUPERVISOR_STUDIO_PHASE1.md  SUPERVISOR_STUDIO_PHASE2.md  SUPERVISOR_STUDIO_PHASE3.md
docs/SPECS/: README.md  approval.md  cli_ui.md  context.md  engine.md  executor.md  gates.md  graph_engine.md  graph_schema.md  metrics.md  models.md  parser.md  roles.md  routing.md  state.md  studio.md  tui.md  worker.md  workflow.md  workspace.md
examples/: README.md
examples/basic-workflow/: README.md
examples/workflows/: README.md  debug_workflow.yaml  parallel_review.yaml  simple_workflow.yaml
runbook/: 01-installation.md  02-initial-setup.md  03-daily-usage.md  04-workflows.md  05-operations.md  06-troubleshooting.md  07-security.md  08-upgrades.md  09-studio-web-console.md  README.md
supervisor/: __init__.py  build_hooks.py  cli.py
supervisor/cli_ui/: __init__.py  graph_renderer.py  live_monitor.py  node_inspector.py
supervisor/config/: gates.yaml  role_schema.json
supervisor/core/: __init__.py  approval.py  context.py  engine.py  feedback.py  gate_executor.py  gate_loader.py  gate_locks.py  gate_models.py  gates.py  graph_engine.py  graph_schema.py  interaction.py  models.py  parallel.py  parser.py  roles.py  routing.py  scheduler.py  state.py  strategies.py  utils.py  worker.py  workflow.py  workspace.py
supervisor/metrics/: __init__.py  aggregator.py  collector.py  dashboard.py
supervisor/prompts/: _base.j2  _output_schema.j2  implement.j2  planning.j2  (+1 more)
tests/: __init__.py  conftest.py  test_approval.py  test_cli.py  test_context.py  test_engine.py  test_gate_executor.py  test_gates.py  test_metrics.py  test_models.py  test_parallel.py  test_parser.py  test_phase1_validation.py  test_roles.py  test_routing.py  test_sandbox_executor.py  test_scheduler.py  test_state.py  test_strategies.py  test_workflow.py  test_workspace.py
(+45 files in other folders)
